# Video-to-ROS-msg

./: CMakeLists.txt  README.md  video_source.json
rtsp_to_ros/: package.xml
rtsp_to_ros/src/: capture_frame_and_tx_from_video.cpp
